# actix-web-logs-reader

./: Cargo.toml  README.md  example-access.txt  example.txt
src/: lib.rs  main.rs  record.rs  source.rs
