[package]
name = "actix-web-logs-reader"
version = "0.1.0"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = "3.0.0-beta.2"
colored = "2.0.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
