[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
edition = "2021"
name = "actix-web-logs-reader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
chrono = {version = "0.4.19", features = ["serde"]}
clap = { version = "3.0.9", features = ["derive"] }
colored = "2.0.0"
regex = "1.5.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
