[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
edition = "2021"
name = "actix-web-logs-reader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
chrono = {version = "0.4", features = ["serde"]}
clap = { version = "3", features = ["derive"] }
colored = "2"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
